--- a/main2.css
+++ b/main2.css
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400italic,700italic,300,700);
 body {
     padding: 5px 50px;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font: 16px/1.5 "Open Sans", Raleway, Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
     /* color: #444; */
     font-weight: 300;
